src/test/deca/context/valid/logic/bool-op1.deca
// Description:
//    Programme valide testant l'affectation d'une operation logique à un booleen.
//
// Resultats:
//    ok

{
    boolean b = 1>2;
}
