src/test/deca/context/invalid/fonction/wrong-return-type.deca
// Programme testant return d'un mauvais type

class A {
    int method() {
        float j = 2.1;
        return j;
    }
}